feat: Add HeaderSource (#6)
Signed-off-by: tison <wander4096@gmail.com>